--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
  
     </div>
  
-    <div class="credit"> created by <span>Isha Agrawal</span> | all rights reserved! </div>
+    <div class="credit"> created by <span>Harsh And Isha</span> | all rights reserved! </div>
  
  </section>
 
